 modifications, as long as this notice is preserved.

 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

ChangeLog about GNU GLOBAL

March 15 2018, Shigio YAMAGUCHI

	Moved sqlite3.c and sqlite3.h from 'libglibc/' to 'libdb/'.
	It seems to be a more suitable place.

December 12 2017, Shigio YAMAGUCHI

	[plugin-factory/maps2conf.pl]
	Added new script 'maps2conf.pl', which converts from the output of 
        'ctags --list-maps' into a gtags.conf record. It supports Exuberant Ctags
	and Universal Ctags.

	[usage]
	perl maps2conf.pl <ctags-path> <plugin-path> [<label>]

	The default of <label> is 'default'. You can use this script to make
	'gtags.conf' file for ctags plug-in parser. Please try this:

	$ perl maps2conf.pl /usr/local/bin/ctags '$libdir/gtags/universal-ctags.la' >gtags.conf
	$ gtags         # use Universal Ctags as a parser

	It assumed that '/usr/local/bin/ctags' above is Universal Ctags.

August 30 2017, Shigio YAMAGUCHI

	[libutil/find.c]
	In addition to the skip by regular expression, the following
	files are skipped in ignore() function previously now.
	o Files which start with '.'
	o Tag files (GPATH, GTAGS, GRTAGS)

	The regular expression is left, because xxx_filelist() functions
	require it.

December 30 2016, Shigio YAMAGUCHI

	Added taint mode to the following CGI scripts:
	global.cgi.in
	completion.cgi.in

December 21 2016, Shigio YAMAGUCHI

	Rewrote the following functions without popen(3) in order not to cause
	unnecessary security anxiety.
	completion_idutils()
	idutils()

	These functions are called from CGI scripts of htags(1).

December 16 2016, Shigio YAMAGUCHI

	Rewrote the following CGI scripts using perl5 syntax:
	global.cgi.in
	completion.cgi.in

	There were many perl5.* incompatible with each other in the past.